<resources>
    <string name="app_name">MagicPenServer</string>

    <string name="description">Data Transfer!</string>
    <string name="device_A">Device A</string>
    <string name="device_B">Device B</string>
    <string name="device_C">Device C</string>
    <string name="select_picture">Select a picture</string>
    <string name="choose_device">Please choose one device to share!</string>
</resources>