<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/description"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <Button
        android:id="@+id/select_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/textview"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:text="@string/select_picture"
        />

    <ImageView
        android:id="@+id/image_view"
        android:layout_width="280dp"
        android:layout_height="280dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/select_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:scaleType="centerCrop"/>

    <TextView
        android:id="@+id/textview2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/choose_device"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_view"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        app:layout_constraintTop_toBottomOf="@id/textview2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:padding="16dp">
        <Button
            android:id="@+id/deviceA_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/device_A"
            android:layout_marginEnd="16dp" />

        <Button
            android:id="@+id/deviceB_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/device_B"
            android:layout_marginEnd="16dp"/>

        <Button
            android:id="@+id/deviceC_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/device_C"
            android:layout_marginEnd="16dp"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>